{
    "name": "GameInputs",
    "maps": [
        {
            "name": "Player",
            "id": "56fe40d9-384c-4efd-86ec-c7698e62ab45",
            "actions": [
                {
                    "name": "Movements",
                    "type": "Value",
                    "id": "f651ff00-1fe5-49af-840c-be8e8ae4017a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e8e31f61-4793-4aaf-980b-c3834cbc57ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "8b4d37b2-802c-4bb4-b10d-83c2d52d3047",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "db120282-47b1-431e-9f1d-56a055416a8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "7a6885f6-bc10-4933-a8d7-88c25f1eb5dc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "c0bdc76e-c27f-46d7-96ce-fbadd5f76c8b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "21ac3b27-5608-43f1-8c61-be4e02e393bd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "590e91e1-8258-431e-9680-c7d275fa8db3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3ad2fef7-b839-40a5-a257-36c57e5d65ca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "cd70462a-7015-49ea-b0d0-42d00a240b09",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "afc5e2c3-231e-41fb-ad3c-31a52f95b7af",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31f1e51a-364e-4e28-bce2-3b6b3b65caec",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70523a9e-72f3-41fd-a864-229724e9b687",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00bcb674-2189-4517-bdf4-760e1789332d",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interactions",
            "id": "cca379d4-7151-41d9-b29d-2c0670e8be58",
            "actions": [
                {
                    "name": "Interact ",
                    "type": "Button",
                    "id": "2a5a99c0-6d17-4bbe-9753-e849a9e95fa1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "830813f0-5c84-4b2a-b052-bdc69baddf9f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact ",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard And Mouse",
            "bindingGroup": "Keyboard And Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}